@@ -1,3 +1,6 @@
+2006-12-27 backend_cairo.py: update draw_image() and _draw_mathtext() to work
+           with numpy - SC
+
 2006-12-20 Fixed xpdf dependency check, which was failing on windows.
            Removed ps2eps dependency check. - DSD
 
